--- a/keyboardservice/build.gradle
+++ b/keyboardservice/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId 'com.android.adbkeyboard'
         minSdkVersion 15
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 2
         versionName "2.0"
     }
+    namespace 'com.android.adbkeyboard'
 }
 
 dependencies {
