--- a/keyboardservice/src/main/AndroidManifest.xml
+++ b/keyboardservice/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.adbkeyboard"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,7 +11,8 @@
         <!-- Declares the input method service -->
         <service android:name="AdbIME"
             android:label="@string/keyboard_name"
-            android:permission="android.permission.BIND_INPUT_METHOD">
+            android:permission="android.permission.BIND_INPUT_METHOD"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
